# pico-wiretap

./: .gitignore  CMakeLists.txt  README.md  README_uk.md
scripts/: functions.cmake
src/: CMakeLists.txt  handlers.cpp  main.cpp  shell_task.cpp  shell_task.h
src/commands/: CMakeLists.txt  chip_id.cpp  commands.h  i2c_scan.cpp  pico_clocks.cpp  pinout.cpp  sensors.cpp  tasks.cpp
src/config/: FreeRTOSConfig.h  tusb_config.h  usb_itf.h
src/plot/: CMakeLists.txt  cdc_printf.c  cdc_printf.h  plot.cpp  plot_command.h  plot_task.h
src/shell/: CMakeLists.txt
src/shell/shell_commands_common/: CMakeLists.txt
src/shell/shell_commands_common/commands/: dump.cpp  echo.cpp
src/shell/shell_commands_common/include/shell/: commands_common.h
src/shell/shell_main/: CMakeLists.txt  History.cpp  Parser.cpp  Shell.cpp
src/shell/shell_main/include/shell/: History.h  Input.h  Parser.h  Shell.h  console_colors.h  console_debug.h
src/uart/: uart_task.cpp  uart_task.h
src/usb/: tusb_config.h  usb_descriptors.c  usb_itf.h  usb_task.cpp  usb_task.h
